[tool.poetry]
name = "phorg-utils"
version = "0.1.0"
description = "Utilities for Phorg"
authors = ["Enrico Borba <enricozb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
